# RAG_pipeline

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  document_export.json  milvus_demo.db  pyproject.toml  rag_demo.db  requirements.txt
data/eval/: queries.jsonl
data/input/: 1_EN_ACT_part1_v4.docx  Case-law on Directive (EU) 20151535.docx  Decree No 2020-xxx of xx xxx 2020.docx  Report on the Operation of Directive (EU) 2015-1535.docx  State Treaty on the Modernisation of Media Legislation in Germany.docx  State Treaty on the modernisation of media legislation in Germany.docx
data/output/: chunks.jsonl  rag_demo.db
experiments/: docx_to_vector_database.py  retrieval_evaluation.py
patches/: context_entity_recall_patch.py  patch_testing.py  pydantic_prompt_patch_for_qwen_llms.py  response_relevancy_patch.py
pipelines/: docx_to_vector_database_import.py  retrieval_evaluation.py  run_agentic_rag_gui.py  run_extraction_n_import.py  run_retrieval_eval.py
src/chunk/: simple_chunking.py
src/config/: config.py  logging_config.py
src/data_import/: milvus_import_data.py
src/evaluation/: custom_eval.py  rag_eval_data_gen.py  rag_eval_metrics.py  rag_eval_testbed.py  scoring.py
src/ingest/: docx_extract.py  docx_extract_n_chunk.py
src/rag_pipeline.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/retrieval/: agentic_rag.py  agentic_vector_search_app.py  agentic_vector_search_wt_gui.py  vector_search_wt_gui.py
src/utils/: general_util.py  llm_util.py
src/vector_store/: embedding.py  milvus.py
utils/: general_util.py
(+2 files in other folders)
