[project]
name = "rag_pipeline"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "gradio==6.3.0",
    "numpy==2.4.1",
    "ollama==0.6.1",
    "pydantic-settings>=2.5,<3",
    "pymilvus[milvus_lite]==2.6.6",
    "python-docx==1.2.0",
    "sentence-transformers==5.2.0",
    "tqdm==4.67.1",
    "typer==0.21.1",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.11,<2",
    "pytest>=8,<9",
    "pytest-cov>=5,<6",
    "ruff>=0.6,<1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "ollama.*",
    "pymilvus.*",
    "sentence_transformers.*",
    "docx.*",
    "gradio.*",
]
ignore_missing_imports = true
